test-suite/tests/roundtrip/invalid/semantic/typecheck/mismatched_equality_int_matrix/input.essence
letting x be 5
find y : matrix indexed by [int(1..5), int(1..5)] of int(1..9)
such that x = y